# Discord-Message-Sender

./: README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  main.cpp
